--- a/Project-2/src/titanic_analysis.ipynb
+++ b/Project-2/src/titanic_analysis.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Titanic Survival Analysis\n",
     "\n",
-    "![Descriptive Image Alt Text](../data/titanic.webp)\n",
+    "![Descriptive Image Alt Text](../data/titanic1.jpg)\n",
     "\n",
     "## Introduction\n",
     "\n",
