Changed README and notebook info

--- a/Project-2/src/titanic_analysis.ipynb
+++ b/Project-2/src/titanic_analysis.ipynb
@@ -72,7 +72,7 @@
     "- **Python**\n",
     "\n",
     "### Python Libraries:\n",
-    "- (METER OQ USAMOS such as Pandas, NumPy, Scikit-learn, etc.)\n",
+    "- **Pandas**, **NumPy**, **MatPlotLib**, **Seaborn**, **Scikit-learn**, **TensorFlow** etc.\n",
     "\n",
     "### Development Environment:\n",
     "- **Jupyter Notebook**\n",
@@ -80,8 +80,12 @@
     "- **PyCharm**\n",
     "\n",
     "### Machine Learning Algorithms:\n",
-    "- (METER OQ USAMOS)\n",
-    "\n"
+    "This project includes implementations of the following machine learning algorithms:\n",
+    "\n",
+    "1. **Decision Trees**\n",
+    "2. **Random Forest Classifier**\n",
+    "3. **Support Vector Machine**\n",
+    "4. **Neural Network**"
    ]
   },
   {
@@ -100,6 +104,7 @@
     "- `matplotlib.pyplot`: for creating static, interactive, and animated visualizations.\n",
     "- `seaborn`: for making statistical graphics.\n",
     "- `scikit-learn`: for machine learning and predictive data analysis.\n",
+    "- `tensorflow`: used in the creation and training processes of machine learning models; provides support for defining and running computations involving multi-dimensional arrays.\n",
     "\n",
     "To import these libraries, you would typically run the following Python code:\n"
    ]
@@ -115,9 +120,21 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import tensorflow\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, classification_report\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "687612e6",
+   "metadata": {},
+   "source": [
+    "In some cases, you may need to install additional Python libraries. You can do this using pip, the Python package installer. Replace \"name_of_library\" with the name of the library you want to install:\n",
+    "\n",
+    "```bash\n",
+    "pip install \"name_of_library\""
    ]
   },
   {
